--- a/examples/index.html
+++ b/examples/index.html
@@ -33,8 +33,6 @@
             </h5>
         </h1>    
         <br>
-        <br>
-        <br>
         <form enctype="multipart/form-data">
             <div class="file-loading">
                 <input id="file-es" name="file-es[]" type="file" multiple>
@@ -42,6 +40,9 @@
         </form>
         <hr>
         <br>
+        <button type="button" class="btn btn-secondary">Consultar disponiblidad</button>
+            
+            <button type="button" class="btn btn-secondary">Visualizar horario</button>
     </div>
 </body>
 
