--- a/examples/index.html
+++ b/examples/index.html
@@ -54,7 +54,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        El profesor x esta ubicado en z y se encuentra disponible a las ww del día yy.
+                        La profesora Lina Marcela Quintero está ubicada en la oficina y se encuentra disponible a las 2:00 pm del día 1 de octubre del 2019.
                     </div>
                 </div>
             </div>
